--- a/public/index.html
+++ b/public/index.html
@@ -2,21 +2,56 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
- 
+    <meta name="theme-color" content="#000000" />
+
+    <!--     Fonts and icons     -->
+    <link
+      href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Kanit:300,400&display=swap"
+      rel="stylesheet"
+    />
+
+    <!--     Boostrap     -->
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+
     <title>Kuanthongsri Child Development Center</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-  
   </body>
+
+  <!--     Facebook Comment     -->
+  <script
+    async
+    defer
+    crossorigin="anonymous"
+    src="https://connect.facebook.net/th_TH/sdk.js#xfbml=1&version=v6.0&appId=1438770579639285&autoLogAppEvents=1"
+  ></script>
+
+  <!--     Navbar     -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script>
+    $(window).scroll(function() {
+      if ($(document).scrollTop() > 50) {
+        $(".nav").addClass("affix");
+        console.log("OK");
+      } else {
+        $(".nav").removeClass("affix");
+      }
+    });
+  </script>
 </html>
